--- a/CONSTE 2.HTML
+++ b/CONSTE 2.HTML
@@ -3,7 +3,7 @@
 <SCRIPT LANGUAGE = JavaScript>
 
 var myName = prompt("Enter your Name", "");
-var month = parseInt(prompt("Enter your Birthmonth (in number)", ""));
+var month = parseInt(prompt("Enter your Birthmonth (in number)", "");
 var day = parseInt(prompt("Enter your Birthdate", ""));
 if (month >= 1 && month <= 12 && day >= 1 && day <= 31) {
 var constellation, description;
